Completed desktop design

--- a/index.html
+++ b/index.html
@@ -16,9 +16,23 @@
 
 <body>
 
-  
+  <nav class="navigation">
+    <div>
+      <a href="index.html" id="logo">Fun Bus</a>
+      <a href="index.html">Home</a>
+      <a href="javascript:Void(0)">About Us</a>
+      <a href="javascript:Void(0)">Blog</a>
+      <a href="javascript:Void(0)">Contact</a>
+    </div>
+  </nav>
      
   <div class="container home">
+
+    <header class="header inverse-content">
+      <img src="img/fun-bus.jpg" alt="">
+      <h2>Welcome To Fun Bus!</h2>
+      <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling. Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
+    </header>
    
     <section class="content-section">
       <div class="text-content">
